--- a/CSS/styleTable.css
+++ b/CSS/styleTable.css
@@ -19,8 +19,10 @@ table th{
     padding: 5px 15px;
     border-radius: 10px;
     border: none;
-    background-color: rgb(39, 189, 39);
     color: whitesmoke;
+}
+.edit{
+    background-color: rgb(39, 189, 39);
 }
 .delete{
     background-color: red;
@@ -28,19 +30,30 @@ table th{
 .logout{
     background-color:brown;
     color: white;
-    margin-top: 30px;
     padding: 10px 20px;
+    height:20px;
+    margin-top: 15px;
+    margin-right: 40px;
 }
-.edit:hover,.delete:hover,.logout:hover{
+.edit:hover,.delete:hover{
     opacity: 0.8;
 }
 h1{
     text-align: center;
 }
 nav{
+    
     background-color:black;
     color:white;
-    width:100%;
-    text-align:center;
+    width: 100%;
     word-spacing: 10px;
+    display: flex;
+    justify-content: space-between;
+    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.9);
+}
+.welcome-name{
+    margin-left: 40px;
+}
+.logout:hover{
+    opacity: 0.9;
 }
